# garmin-golf

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml
src/garmin_golf/: __init__.py  browser_export.py  browser_import.py  browser_mirror.py  cli.py  client.py  config.py  fit_parser.py  models.py  normalize.py  stats.py  storage.py  sync.py
tests/: test_browser_import.py  test_browser_mirror.py  test_cli.py  test_config.py  test_fit_parser.py  test_normalize.py  test_stats.py
